# modern-cpp-kickstart

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  DOCS.md  LICENSE  README.md
examples/: README.md  smart_pointers_demo.cpp
include/core/: utils.hpp
include/tutorial/: quest.hpp  quests.hpp
scripts/: build.sh
src/: CMakeLists.txt  main.cpp
src/core/: utils.cpp
src/tutorial/: basics_quest.cpp  concurrency_quest.cpp  memory_quest.cpp  oop_quest.cpp  quest.cpp  stl_quest.cpp  templates_quest.cpp
tests/: CMakeLists.txt  test_core_utils.cpp  test_tutorial_quest.cpp
